--- a/blog.html
+++ b/blog.html
@@ -15,23 +15,42 @@
     <main class="container mx-auto mt-5 p-5">
         <div class="collapse collapse-plus bg-base-200">
             <input type="radio" name="my-accordion-3" checked="checked" />
-            <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+            <div class="collapse-title text-xl font-medium">What is the Document Object Model (DOM)?</div>
             <div class="collapse-content">
-                <p>hello</p>
+                <p>The Document Object Model (DOM) is a programming interface for web documents. It represents the page
+                    so that programs can change the document structure, style, and content. The DOM represents the
+                    document as nodes and objects; this way, programming languages can interact with the page</p>
             </div>
         </div>
         <div class="collapse collapse-plus bg-base-200">
             <input type="radio" name="my-accordion-3" />
-            <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+            <div class="collapse-title text-xl font-medium">What is event delegation in the context of the DOM, and why
+                is it useful?</div>
             <div class="collapse-content">
-                <p>hello</p>
+                <p>You can select an element from the DOM using methods like <code>document.getElementById('id')</code>,
+                    <code>document.querySelector('.class')</code>, and <code>document.querySelectorAll('tag')</code>.
+                    These methods allow you to access and manipulate HTML elements dynamically
+                </p>
             </div>
         </div>
         <div class="collapse collapse-plus bg-base-200">
             <input type="radio" name="my-accordion-3" />
-            <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+            <div class="collapse-title text-xl font-medium">How do you select an element from the DOM?</div>
             <div class="collapse-content">
-                <p>hello</p>
+                <p>You can select an element from the DOM using methods like <code>document.getElementById('id')</code>,
+                    <code>document.querySelector('.class')</code>, and <code>document.querySelectorAll('tag')</code>.
+                    These methods allow you to access and manipulate HTML elements dynamically
+                </p>
+            </div>
+        </div>
+        <div class="collapse collapse-plus bg-base-200">
+            <input type="radio" name="my-accordion-3" />
+            <div class="collapse-title text-xl font-medium">How do you select an element from the DOM?</div>
+            <div class="collapse-content">
+                <p>You can select an element from the DOM using methods like <code>document.getElementById('id')</code>,
+                    <code>document.querySelector('.class')</code>, and <code>document.querySelectorAll('tag')</code>.
+                    These methods allow you to access and manipulate HTML elements dynamically
+                </p>
             </div>
         </div>
     </main>
