--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,19 @@
 </head>
 
 <body>
-
+    <header class="bg-[rgb(249,247,243)] sticky top-0 z-50  py-6">
+        <div class="flex justify-between max-w-[1200px] container mx-auto mt-5">
+            <button id="blogButton" class=" bg-[rgb(180,240,97)]  font-bold rounded-md px-4">Blog</button>
+            <div class="flex space-x-2 items-center">
+                <img src="assets/logo.png" alt="">
+                <h1>Donate Bangladesh</h1>
+            </div>
+            <div class="flex space-x-2 items-center ">
+                <img src="assets/coin.png" alt="">
+                <h1 id="bank">5500 </h1>
+            </div>
+        </div>
+    </header>
 
     <main class="container mx-auto mt-5 p-5">
         <div class="collapse collapse-plus bg-base-200">
@@ -45,11 +57,13 @@
         </div>
         <div class="collapse collapse-plus bg-base-200">
             <input type="radio" name="my-accordion-3" />
-            <div class="collapse-title text-xl font-medium">How do you select an element from the DOM?</div>
+            <div class="collapse-title text-xl font-medium">How do you manipulate an element's attributes and styles
+                using the DOM?</div>
             <div class="collapse-content">
-                <p>You can select an element from the DOM using methods like <code>document.getElementById('id')</code>,
-                    <code>document.querySelector('.class')</code>, and <code>document.querySelectorAll('tag')</code>.
-                    These methods allow you to access and manipulate HTML elements dynamically
+                <p>You can manipulate an element's attributes using methods like
+                    <code>element.setAttribute('key', 'value')</code> and styles using
+                    <code>element.style.property = 'value'</code>. These methods allow for dynamic changes to the
+                    webpage's appearance and behavior. to access and manipulate HTML elements dynamically
                 </p>
             </div>
         </div>
