--- a/blog.html
+++ b/blog.html
@@ -22,10 +22,11 @@
                 <h1 id="bank">5500 </h1>
             </div>
         </div>
+        <h1 class="text-3xl font-bold mt-5 p-5">FREQUENTLY ASK QUESTION?</h1>
     </header>
 
     <main class="container mx-auto mt-5 p-5">
-        <div class="collapse collapse-plus bg-base-200">
+        <div class="collapse collapse-plus bg-emerald-300">
             <input type="radio" name="my-accordion-3" checked="checked" />
             <div class="collapse-title text-xl font-medium">What is the Document Object Model (DOM)?</div>
             <div class="collapse-content">
@@ -34,7 +35,7 @@
                     document as nodes and objects; this way, programming languages can interact with the page</p>
             </div>
         </div>
-        <div class="collapse collapse-plus bg-base-200">
+        <div class="collapse collapse-plus bg-emerald-300 mt-4">
             <input type="radio" name="my-accordion-3" />
             <div class="collapse-title text-xl font-medium">What is event delegation in the context of the DOM, and why
                 is it useful?</div>
@@ -45,7 +46,7 @@
                 </p>
             </div>
         </div>
-        <div class="collapse collapse-plus bg-base-200">
+        <div class="collapse collapse-plus bg-emerald-300 mt-4">
             <input type="radio" name="my-accordion-3" />
             <div class="collapse-title text-xl font-medium">How do you select an element from the DOM?</div>
             <div class="collapse-content">
@@ -55,7 +56,7 @@
                 </p>
             </div>
         </div>
-        <div class="collapse collapse-plus bg-base-200">
+        <div class="collapse collapse-plus bg-emerald-300 mt-4">
             <input type="radio" name="my-accordion-3" />
             <div class="collapse-title text-xl font-medium">How do you manipulate an element's attributes and styles
                 using the DOM?</div>
@@ -70,7 +71,7 @@
     </main>
 
     <footer class="bg-[rgb(249,247,243)] h-44 w-screen mt-10 p-5">
-        <p class="text-center">© 2024 Blog on DOM. All rights reserved.</p>
+
     </footer>
     <script src="js/index.js"></script>
 </body>
