--- a/index.html
+++ b/index.html
@@ -78,23 +78,20 @@
                 <div class="max-w-[1200px] container mx-auto mt-5">
                     <div class="sm:flex space-x-4 items-center">
                         <div class="w-[50%]">
-                            <img src="assets/noakhali.png" alt="">
+                            <img src="assets/feni.png" alt="">
                         </div>
                         <div class="w-[50%]">
                             <div class="flex space-x-3">
                                 <img src="assets/coin.png" alt="">
                                 <button id="total2">500 </button>
                             </div>
-                            <h1 class="font-bold">Donate for Flood at Noakhali, Bangladesh</h1>
-                            <p> The recent floods in Noakhali have caused significant damage to homes infrastructure.
-                                Your
-                                donation
-                                will help provide essential supplies and to those affected by this disaster. Every
-                                contribution,
-                                big
-                                or small, makes difference. Please join us in supporting the relief efforts and making a
-                                positive
-                                impact on the lives of those in need.</p>
+                            <h1 class="font-bold">Donate for Flood Relief in Feni,Bangladesh</h1>
+                            <p> The recent floods in Feni have devastated local communities, leading to severe
+                                disruption and loss. Your generous donation will help provide immediate aid, including
+                                food, clean water, and medical supplies, to those affected by this calamity. Together,
+                                we can offer crucial support and help rebuild lives in the aftermath of this disaster.
+                                Every contribution counts towards making a real difference. Please consider donating
+                                today to assist those in urgent need..</p>
                             <input class="mt-4 border-2 w-[100%] border-green-300 rounded-md" id="amount2" type="number"
                                 placeholder="write your amount">
                             <div>
@@ -111,7 +108,7 @@
                 <div class="max-w-[1200px] container mx-auto mt-5">
                     <div class="sm:flex space-x-4 items-center">
                         <div class="w-[50%]">
-                            <img src="assets/noakhali.png" alt="">
+                            <img src="assets/quota-protest.png" alt="">
                         </div>
                         <div class="w-[50%]">
                             <div class="flex space-x-3">
