--- a/blog.html
+++ b/blog.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <header class="bg-[rgb(249,247,243)] sticky top-0 z-50  py-6">
-        <div class="flex justify-between max-w-[1200px] container mx-auto mt-5">
+    <header class="bg-[rgb(249,247,243)] backdrop-blur-md bg-opacity-80 sticky top-0 z-50  py-6">
+        <div class="flex justify-between max-w-[1200px] container mx-auto mt-5 p-10 sm:p-0">
             <button id="blogButton" class=" bg-[rgb(180,240,97)]  font-bold rounded-md px-4">Blog</button>
             <div class="flex space-x-2 items-center">
                 <img src="assets/logo.png" alt="">
