--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 
 
         <div id="hidden">
-            <div class="container max-w-[100%] mx-auto">
+            <div class="container  max-w-[100%] mx-auto">
                 <div class="max-w-[1200px] container mx-auto mt-5">
                     <div class="sm:flex  space-x-4 items-center">
-                        <div class="w-[50%]">
+                        <div class="w-[100%] sm:w-[50%]">
                             <img src="assets/noakhali.png" alt="">
                         </div>
-                        <div class="w-[50%] ">
+                        <div class="w-[100%] sm:[50%] ">
                             <div class="flex space-x-3">
                                 <img src="assets/coin.png" alt="">
                                 <button id="total">500 </button>
@@ -77,10 +77,10 @@
                 </div>
                 <div class="max-w-[1200px] container mx-auto mt-5">
                     <div class="sm:flex space-x-4 items-center">
-                        <div class="w-[50%]">
+                        <div class="w-[100%] sm:[50%]">
                             <img src="assets/feni.png" alt="">
                         </div>
-                        <div class="w-[50%]">
+                        <div class="w-[100%] sm:w-[50%]">
                             <div class="flex space-x-3">
                                 <img src="assets/coin.png" alt="">
                                 <button id="total2">500 </button>
@@ -107,10 +107,10 @@
                 </div>
                 <div class="max-w-[1200px] container mx-auto mt-5">
                     <div class="sm:flex space-x-4 items-center">
-                        <div class="w-[50%]">
+                        <div class="w-[100%] sm:w-[50%]">
                             <img src="assets/quota-protest.png" alt="">
                         </div>
-                        <div class="w-[50%]">
+                        <div class="w-[100%] sm:w-[50%]">
                             <div class="flex space-x-3">
                                 <img src="assets/coin.png" alt="">
                                 <button id="total3 ">500 </button>
