--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 </head>
 
-<body>
-    <header class="bg-[rgb(249,247,243)] backdrop-blur-md bg-opacity-80 sticky top-0 z-50 py-6 ">
-        <div class="flex justify-between max-w-[1200px] container mx-auto mt-5">
+<body class="border-2 border-green-400">
+    <header class="bg-[rgb(249,247,243)]  p-5 backdrop-blur-md bg-opacity-80 sticky top-0 z-50 py-6 ">
+        <div class="flex justify-between p-5 sm:p-0 max-w-[1200px] container mx-auto mt-5">
             <button id="blogButton" class=" bg-[rgb(180,240,97)]  font-bold rounded-md px-4">Blog</button>
             <div class="flex space-x-2 items-center">
                 <img src="assets/logo.png" alt="">
@@ -37,7 +37,7 @@
 
     </header>
 
-    <main>
+    <main class="border-2 border-green-500">
 
 
         <div id="hidden">
@@ -62,11 +62,11 @@
                                 or small, makes difference. Please join us in supporting the relief efforts and making a
                                 positive
                                 impact on the lives of those in need.</p>
-                            <input class="mt-4 border-2 w-[100%] border-green-300 rounded-md" id="amount" type="text"
+                            <input class="mt-4 border-2 sm:w-[100%] border-green-300 rounded-md" id="amount" type="text"
                                 placeholder="write your amount">
                             <div>
                                 <button id="donate-button"
-                                    class="bg-[rgb(180,240,97)] w-[100%] mt-4 font-bold rounded-md px-4 py-2">Donate
+                                    class="bg-[rgb(180,240,97)] sm:w-[100%] mt-4 font-bold rounded-md px-4 py-2">Donate
                                     now</button>
 
                             </div>
@@ -92,11 +92,11 @@
                                 we can offer crucial support and help rebuild lives in the aftermath of this disaster.
                                 Every contribution counts towards making a real difference. Please consider donating
                                 today to assist those in urgent need..</p>
-                            <input class="mt-4 border-2 w-[100%] border-green-300 rounded-md" id="amount2" type="number"
-                                placeholder="write your amount">
+                            <input class="mt-4 border-2 sm:w-[100%] border-green-300 rounded-md" id="amount2"
+                                type="number" placeholder="write your amount">
                             <div>
                                 <button id="donate-button2"
-                                    class="bg-[rgb(180,240,97)] w-[100%] mt-4 font-bold rounded-md px-4 py-2">Donate
+                                    class="bg-[rgb(180,240,97)] sm:w-[100%] mt-4 font-bold rounded-md px-4 py-2">Donate
                                     now</button>
 
                             </div>
@@ -125,13 +125,13 @@
                                 or small, makes difference. Please join us in supporting the relief efforts and making a
                                 positive
                                 impact on the lives of those in need.</p>
-                            <input class="mt-4 border-2 w-[100%] border-green-300 rounded-md" id="amount3" type="number"
-                                placeholder="write your amount">
+                            <input class="mt-4 border-2 sm:w-[100%] border-green-300 rounded-md" id="amount3"
+                                type="number" placeholder="write your amount">
 
 
                             <div>
                                 <button id="donate-button3"
-                                    class="bg-[rgb(180,240,97)] w-[100%] mt-4 font-bold rounded-md px-4 py-2">Donate
+                                    class="bg-[rgb(180,240,97)] sm:w-[100%] mt-4 font-bold rounded-md px-4 py-2">Donate
                                     now</button>
 
                             </div>
@@ -161,7 +161,7 @@
         </div>
     </main>
 
-    <footer class="bg-[rgb(249,247,243)] h-44 w-screen mt-10">
+    <footer class="bg-[rgb(249,247,243)] h-44 max-w-[1200px] mt-10">
 
     </footer>
     <script src="js/index.js"></script>
