--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 
-<body class="border-2 border-green-400">
+<body>
     <header class="bg-[rgb(249,247,243)]  p-5 backdrop-blur-md bg-opacity-80 sticky top-0 z-50 py-6 ">
         <div class="flex justify-between p-5 sm:p-0 max-w-[1200px] container mx-auto mt-5">
             <button id="blogButton" class=" bg-[rgb(180,240,97)]  font-bold rounded-md px-4">Blog</button>
@@ -37,122 +37,128 @@
 
     </header>
 
-    <main class="border-2 border-green-500">
+    <main class="">
 
 
         <div id="hidden">
-            <div class="container  max-w-[100%] mx-auto">
+            <div class="container max-w-[100%] mx-auto">
+                <!-- Noakhali Section -->
                 <div class="max-w-[1200px] container mx-auto mt-5">
-                    <div class="sm:flex  space-x-4 items-center">
+                    <div class="sm:flex space-x-4 items-center">
+                        <!-- Image Section -->
                         <div class="w-[100%] sm:w-[50%]">
-                            <img src="assets/noakhali.png" alt="">
+                            <img src="assets/noakhali.png" alt="" class="w-full h-auto">
                         </div>
-                        <div class="w-[100%] sm:[50%] ">
+                        <!-- Text Section -->
+                        <div class="w-[100%] mt-5 sm:w-[50%]">
                             <div class="flex space-x-3">
                                 <img src="assets/coin.png" alt="">
-                                <button id="total">500 </button>
+                                <button id="total">500</button>
                             </div>
                             <h1 class="font-bold">Donate for Flood at Noakhali, Bangladesh</h1>
-                            <p> The recent floods in Noakhali have caused significant damage to homes infrastructure.
-                                Your
-                                donation
-                                will help provide essential supplies and to those affected by this disaster. Every
-                                contribution,
-                                big
-                                or small, makes difference. Please join us in supporting the relief efforts and making a
-                                positive
-                                impact on the lives of those in need.</p>
+                            <p>
+                                The recent floods in Noakhali have caused significant damage to homes and
+                                infrastructure. Your donation
+                                will help provide essential supplies to those affected by this disaster. Every
+                                contribution, big or
+                                small, makes a difference. Please join us in supporting the relief efforts and making a
+                                positive impact
+                                on the lives of those in need.
+                            </p>
                             <input class="mt-4 border-2 sm:w-[100%] border-green-300 rounded-md" id="amount" type="text"
                                 placeholder="write your amount">
                             <div>
                                 <button id="donate-button"
                                     class="bg-[rgb(180,240,97)] sm:w-[100%] mt-4 font-bold rounded-md px-4 py-2">Donate
                                     now</button>
-
                             </div>
                         </div>
                     </div>
-
-
                 </div>
+
+                <!-- Feni Section -->
                 <div class="max-w-[1200px] container mx-auto mt-5">
                     <div class="sm:flex space-x-4 items-center">
-                        <div class="w-[100%] sm:[50%]">
-                            <img src="assets/feni.png" alt="">
-                        </div>
+                        <!-- Image Section -->
                         <div class="w-[100%] sm:w-[50%]">
+                            <img src="assets/feni.png" alt="" class="w-full h-auto">
+                        </div>
+                        <!-- Text Section -->
+                        <div class="w-[100%] mt-5 sm:w-[50%]">
                             <div class="flex space-x-3">
                                 <img src="assets/coin.png" alt="">
-                                <button id="total2">500 </button>
+                                <button id="total2">500</button>
                             </div>
-                            <h1 class="font-bold">Donate for Flood Relief in Feni,Bangladesh</h1>
-                            <p> The recent floods in Feni have devastated local communities, leading to severe
+                            <h1 class="font-bold">Donate for Flood Relief in Feni, Bangladesh</h1>
+                            <p>
+                                The recent floods in Feni have devastated local communities, leading to severe
                                 disruption and loss. Your generous donation will help provide immediate aid, including
                                 food, clean water, and medical supplies, to those affected by this calamity. Together,
                                 we can offer crucial support and help rebuild lives in the aftermath of this disaster.
                                 Every contribution counts towards making a real difference. Please consider donating
-                                today to assist those in urgent need..</p>
+                                today to assist those in urgent need.
+                            </p>
                             <input class="mt-4 border-2 sm:w-[100%] border-green-300 rounded-md" id="amount2"
                                 type="number" placeholder="write your amount">
                             <div>
                                 <button id="donate-button2"
                                     class="bg-[rgb(180,240,97)] sm:w-[100%] mt-4 font-bold rounded-md px-4 py-2">Donate
                                     now</button>
-
                             </div>
                         </div>
                     </div>
-
-
                 </div>
+
+                <!-- Quota Protest Section -->
                 <div class="max-w-[1200px] container mx-auto mt-5">
                     <div class="sm:flex space-x-4 items-center">
+                        <!-- Image Section -->
                         <div class="w-[100%] sm:w-[50%]">
-                            <img src="assets/quota-protest.png" alt="">
+                            <img src="assets/quota-protest.png" alt="" class="w-full h-auto">
                         </div>
-                        <div class="w-[100%] sm:w-[50%]">
+                        <!-- Text Section -->
+                        <div class="w-[100%] mt-5 sm:w-[50%]">
                             <div class="flex space-x-3">
                                 <img src="assets/coin.png" alt="">
-                                <button id="total3 ">500 </button>
+                                <button id="total3">500</button>
                             </div>
                             <h1 class="font-bold">Donate for Flood at Noakhali, Bangladesh</h1>
-                            <p> The recent floods in Noakhali have caused significant damage to homes infrastructure.
-                                Your
-                                donation
-                                will help provide essential supplies and to those affected by this disaster. Every
-                                contribution,
-                                big
-                                or small, makes difference. Please join us in supporting the relief efforts and making a
-                                positive
-                                impact on the lives of those in need.</p>
+                            <p>
+                                The recent floods in Noakhali have caused significant damage to homes and
+                                infrastructure. Your donation will help provide essential supplies to those affected by
+                                this disaster. Every contribution, big or small, makes a difference. Please join us in
+                                supporting the relief efforts and making a positive impact on the lives of those in
+                                need.
+                            </p>
                             <input class="mt-4 border-2 sm:w-[100%] border-green-300 rounded-md" id="amount3"
                                 type="number" placeholder="write your amount">
-
-
                             <div>
                                 <button id="donate-button3"
                                     class="bg-[rgb(180,240,97)] sm:w-[100%] mt-4 font-bold rounded-md px-4 py-2">Donate
                                     now</button>
-
-                            </div>
-                            <div id="popup-modal"
-                                class="fixed inset-0 bg-gray-900 bg-opacity-50 hidden flex justify-center items-center z-50">
-                                <div class="bg-white p-6 rounded-md shadow-md max-w-sm w-full text-center">
-                                    <div class="flex flex-col justify-center items-center">
-                                        <h2 class="text-lg font-bold mb-4">Congrates!</h2>
-                                        <img src="assets/coin.png" alt="">
-                                        <p class="mb-4">Your have donated for humankind.</p>
-                                        <span>successfully</span>
-                                        <button id="close-popup"
-                                            class="bg-green-500 mt-3 text-white py-2 px-4 rounded-md">Close
-                                            Confirmation</button>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
+            <div id="popup-modal"
+                class="fixed inset-0 bg-gray-900 bg-opacity-50 hidden flex justify-center items-center z-50">
+                <div class="bg-white p-6 rounded-md shadow-md max-w-sm w-full text-center">
+                    <div class="flex flex-col justify-center items-center">
+                        <h2 class="text-lg font-bold mb-4">Congrates!</h2>
+                        <img src="assets/coin.png" alt="">
+                        <p class="mb-4">Your have donated for humankind.</p>
+                        <span>successfully</span>
+                        <button id="close-popup" class="bg-green-500 mt-3 text-white py-2 px-4 rounded-md">Close
+                            Confirmation</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+        </div>
+        </div>
 
 
         </div>
