--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,8 @@
 <body>
     <header class="bg-[rgb(249,247,243)] backdrop-blur-md bg-opacity-80 sticky top-0 z-50  py-6">
         <div class="flex justify-between max-w-[1200px] container mx-auto mt-5 p-10 sm:p-0">
-            <button id="blogButton" class=" bg-[rgb(180,240,97)]  font-bold rounded-md px-4">Blog</button>
+            <a href="index.html"> <button
+                    class=" bg-[rgb(180,240,97)]  font-bold rounded-md py-3 px-4">Home</button></a>
             <div class="flex space-x-2 items-center">
                 <img src="assets/logo.png" alt="">
                 <h1>Donate Bangladesh</h1>
@@ -73,6 +74,7 @@
     <footer class="bg-[rgb(249,247,243)] h-44 w-screen mt-10 p-5">
 
     </footer>
+
 
     <script src="js/index.js"></script>
 </body>
