--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 </head>
 
-<body>
-    <header class="bg-[rgb(249,247,243)]  p-5 backdrop-blur-md bg-opacity-80 sticky top-0 z-50 py-6 ">
+<body id="">
+    <header id="" class="bg-[rgb(249,247,243)]  p-5 backdrop-blur-md bg-opacity-80 sticky top-0 z-50 py-6 ">
         <div class="flex justify-between p-5 space-x-2 sm:p-0  max-w-[1200px] container mx-auto mt-5">
             <button id="blogButton" class=" bg-[rgb(180,240,97)]  font-bold rounded-md px-4">Blog</button>
             <div class="flex space-x-2 items-center">
