--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             <button id="blogButton" class=" bg-[rgb(180,240,97)]  font-bold rounded-md px-4">Blog</button>
             <div class="flex space-x-2 items-center">
                 <img src="assets/logo.png" alt="">
-                <h1>Donate Bangladesh</h1>
+                <h1 class="font-bold">Donate Bangladesh</h1>
             </div>
             <div class="flex space-x-2 items-center ">
                 <img src="assets/coin.png" alt="">
-                <h1 id="bank">5500 </h1>
+                <h1 id="bank">5500 </h1><span>BDT</span>
             </div>
         </div>
         <div class="flex sticky top-0 z-10  space-x-2 mt-14 items-center justify-center">
