--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <div class=" flex sticky top-0 z-10  space-x-2 mt-16 items-center justify-center">
             <div>
-                <button id="donation" class="bg-[rgb(180,240,97)] font-bold py-3 px-3 rounded-md">Donation</button>
+                <button id="donation" class="bg-green-400 font-bold py-3 px-3 rounded-md">Donation</button>
             </div>
 
             <div id="history">
