--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="bg-[rgb(249,247,243)] backdrop-blur-md bg-opacity-80 sticky top-0 z-50  py-6">
-        <div class="flex justify-between max-w-[1200px] container mx-auto mt-5 p-10 sm:p-0">
+        <div class="flex justify-between max-w-[1200px] container mx-auto mt-5  p-3 space-x-2 sm:p-0">
             <a href="index.html"> <button
                     class=" bg-[rgb(180,240,97)]  font-bold rounded-md py-3 px-4">Home</button></a>
             <div class="flex space-x-2 items-center">
