--- a/index.html
+++ b/index.html
@@ -12,20 +12,13 @@
 
 <body id="">
     <header id="" class="bg-white p-5 backdrop-blur-md bg-opacity-80 sticky top-0 z-50 ">
-        <div class="dropdown sm:hidden">
-            <div tabindex="0" role="button" class="btn m-1">Click</div>
-            <ul tabindex="0" class="dropdown-content menu bg-base-100 rounded-box z-[1] w-52 p-2 shadow">
-                <li><a>blogButton</a></li>
-                <li><a>Item 2</a></li>
-            </ul>
-        </div>
+
         <div class="bg-[rgb(249,247,243)]  ">
-            <div class="flex justify-between p-5 space-x-2 sm:p-0  max-w-[1200px] container mx-auto py-10 ">
-                <button id="blogButton"
-                    class=" bg-[rgb(180,240,97)]  hidden sm:block  font-bold rounded-md px-4">Blog</button>
+            <div class="flex justify-between p-3 space-x-2 sm:p-0  max-w-[1200px] container mx-auto py-10 ">
+                <button id="blogButton" class=" bg-[rgb(180,240,97)]    font-bold rounded-md px-4">Blog</button>
                 <div class="flex space-x-2 items-center">
-                    <img class=" hidden sm:block" src="assets/logo.png" alt="">
-                    <h1 class="font-bold  hidden sm:block">Donate Bangladesh</h1>
+                    <img class=" " src="assets/logo.png" alt="">
+                    <h1 class="font-bold ">Donate Bangladesh</h1>
                 </div>
                 <div class="flex space-x-2 items-center ">
                     <img class=" " src="assets/coin.png" alt="">
@@ -75,8 +68,8 @@
                                 positive impact
                                 on the lives of those in need.
                             </p>
-                            <input class="mt-4 border-2 sm:w-[100%] border-green-300 rounded-md" id="amount" type="text"
-                                placeholder="write your amount">
+                            <input class="mt-4 py-3 px-2 border-2 sm:w-[100%] border-green-300 rounded-md" id="amount"
+                                type="text" placeholder="write your amount">
                             <div>
                                 <button id="donate-button"
                                     class="bg-[rgb(180,240,97)] sm:w-[100%] mt-4 font-bold rounded-md px-4 py-2">Donate
@@ -108,8 +101,8 @@
                                 Every contribution counts towards making a real difference. Please consider donating
                                 today to assist those in urgent need.
                             </p>
-                            <input class="mt-4 border-2 sm:w-[100%] border-green-300 rounded-md" id="amount2"
-                                type="number" placeholder="write your amount">
+                            <input class="mt-4 py-3 px-2 border-2 sm:w-[100%] border-green-300 rounded-md" id="amount2"
+                                type="text" placeholder="write your amount">
                             <div>
                                 <button id="donate-button2"
                                     class="bg-[rgb(180,240,97)] sm:w-[100%] mt-4 font-bold rounded-md px-4 py-2">Donate
@@ -140,8 +133,8 @@
                                 supporting the relief efforts and making a positive impact on the lives of those in
                                 need.
                             </p>
-                            <input class="mt-4 border-2 sm:w-[100%] border-green-300 rounded-md" id="amount3"
-                                type="number" placeholder="write your amount">
+                            <input class="mt-4 py-3 px-2 border-2 sm:w-[100%] border-green-300 rounded-md" id="amount3"
+                                type="text" placeholder="write your amount">
                             <div>
                                 <button id="donate-button3"
                                     class="bg-[rgb(180,240,97)] sm:w-[100%] mt-4 font-bold rounded-md px-4 py-2">Donate
