--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <header id="" class="bg-white p-5 backdrop-blur-md bg-opacity-80 sticky top-0 z-50 ">
 
         <div class="bg-[rgb(249,247,243)]  ">
-            <div class="flex justify-between p-3 space-x-2 sm:p-0  max-w-[1200px] container mx-auto py-10 ">
+            <div class="flex justify-between p-3 space-x-4 sm:p-0  max-w-[1200px] container mx-auto py-10 ">
                 <button id="blogButton" class=" bg-[rgb(180,240,97)]    font-bold rounded-md px-4">Blog</button>
-                <div class="flex space-x-2 items-center">
+                <div class="sm:flex space-x-2 items-center">
                     <img class=" " src="assets/logo.png" alt="">
                     <h1 class="font-bold ">Donate Bangladesh</h1>
                 </div>
-                <div class="flex space-x-2 items-center ">
+                <div class="sm:flex space-x-2 items-center ">
                     <img class=" " src="assets/coin.png" alt="">
-                    <h1 class=" " id="bank">5500 </h1><span class=" ">BDT</span>
+                    <h1 class=" " id="bank">5500</h1><span class=" ">BDT</span>
                 </div>
             </div>
         </div>
@@ -45,14 +45,14 @@
 
         <div id="hidden">
             <div class="container max-w-[100%] mx-auto">
-                <!-- Noakhali Section -->
+
                 <div class="max-w-[1200px] container mx-auto mt-5">
                     <div class="sm:flex space-x-4 items-center">
-                        <!-- Image Section -->
+
                         <div class="w-[100%] sm:w-[50%]">
                             <img src="assets/noakhali.png" alt="" class="w-full h-auto">
                         </div>
-                        <!-- Text Section -->
+
                         <div class="w-[100%] mt-5 sm:w-[50%]">
                             <div class="flex space-x-3">
                                 <img src="assets/coin.png" alt="">
@@ -79,14 +79,14 @@
                     </div>
                 </div>
 
-                <!-- Feni Section -->
+
                 <div class="max-w-[1200px] container mx-auto mt-5">
                     <div class="sm:flex space-x-4 items-center">
-                        <!-- Image Section -->
+
                         <div class="w-[100%] sm:w-[50%]">
                             <img src="assets/feni.png" alt="" class="w-full h-auto">
                         </div>
-                        <!-- Text Section -->
+
                         <div class="w-[100%] mt-5 sm:w-[50%]">
                             <div class="flex space-x-3">
                                 <img src="assets/coin.png" alt="">
@@ -112,14 +112,13 @@
                     </div>
                 </div>
 
-                <!-- Quota Protest Section -->
                 <div class="max-w-[1200px] container mx-auto mt-5">
                     <div class="sm:flex space-x-4 items-center">
-                        <!-- Image Section -->
+
                         <div class="w-[100%] sm:w-[50%]">
                             <img src="assets/quota-protest.png" alt="" class="w-full h-auto">
                         </div>
-                        <!-- Text Section -->
+
                         <div class="w-[100%] mt-5 sm:w-[50%]">
                             <div class="flex space-x-3">
                                 <img src="assets/coin.png" alt="">
@@ -153,7 +152,7 @@
                         <img src="assets/coin.png" alt="">
                         <p class="mb-4">Your have donated for humankind.</p>
                         <span>successfully</span>
-                        <button id="close-popup" class="bg-green-500 mt-3 text-white py-2 px-4 rounded-md">Close
+                        <button id="close-popup" class="bg-gray-400 font-bold mt-3  py-2 px-4 rounded-md">Close
                             Confirmation</button>
                     </div>
                 </div>
